--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,20 @@
 {% extends 'bootstrap/base.html' %}
 
+{% block navbar %}
+  {% include 'navbar.html' %}
+{% endblock %}
+
 {% block styles %}
 {{super()}}
 <link rel="stylesheet" href="{{url_for('static', filename='css/base.css')}}">
+{% endblock %}
+
+{% block content %}
+{% endblock %}
+
+{% block scripts %}
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="{{url_for('static', filename='resources/base.js')}}"></script>
+<script src="https://kit.fontawesome.com/85217334a5.js" crossorigin="anonymous"></script>
+{{super()}}
 {% endblock %}
