--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,8 +9,12 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6">
-      {{title}}
-    </div>
+      <h2 id="h3" >{{title}}</h2>
+      <p>Going to finish this today</p>
   </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+<script src="{{url_for('static', filename='resources/index.js')}}"></script>
 {% endblock %}
