--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,6 +11,7 @@
     <div class="col-md-6">
       <h2 id="h3" >{{title}}</h2>
       <p>Going to finish this today</p>
+    </div>
   </div>
 </div>
 {% endblock %}
