--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -13,9 +13,8 @@
   <div class="row">
     <div class="col-md-4"></div>
     <div class="col-md-4 mx-auto">
-      <h2 class="text-center">LOGIN</h2><hr>
-      {{wtf.quick_form(login_form)}}
-      <p class="redir">Don't have an account? <a href="{{url_for('auth.signup')}}">Signup here</a> | 
+      <h2 class="text-center"> <i class="fa fa-sign-in" aria-hidden="true"></i> LOGIN</h2><hr>
+      {{wtf.quick_form(login_form)}} | 
         <a href="/">Home</a></p>
     </div>
     <div class="col-md-4"></div>
