--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,9 @@
 {% block content %}
 <div class="container">
   <div class="row">
+    <iframe width="100%" height="345" src="https://www.youtube.com/embed/ZU0f8_C5Pm0?playlist=ZU0f8_C5Pm0&loop=1&autoplay=1&mute=1" style="border-radius: 10px;"></iframe>
+  </div>
+  <div class="row">
     <div class="col-md-6">
       <h2 id="h3" >{{title}}</h2>
       <p>Going to finish this today</p>
