--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,17 +6,25 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
-    <iframe width="100%" height="345" src="https://www.youtube.com/embed/ZU0f8_C5Pm0?playlist=ZU0f8_C5Pm0&loop=1&autoplay=1&mute=1" style="border-radius: 10px;"></iframe>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <h2 id="h3" >{{title}}</h2>
-      <p>Going to finish this today</p>
+<div class="backgif">
+  <div class="container">
+    <div class="row">
+      <iframe width="100%" height="345" src="https://www.youtube.com/embed/ZU0f8_C5Pm0?playlist=ZU0f8_C5Pm0&loop=1&autoplay=1&mute=1" style="border-radius: 10px;
+      box-shadow: 0 2px 1px rgba(0, 0, 0, 0.09),
+        0 4px 2px rgba(0, 0, 0, 0.09),
+        0 8px 4px rgba(0, 0, 0, 0.09),
+        0 16px 8px rgba(0, 0, 0, 0.09),
+        0 32px 16px rgba(0, 0, 0, 0.09);"></iframe>
+    </div>
+    <div class="row">
+      <div id="pageintro" class="col-md-6" style="text-align: center;">
+        <h2 id="h3" >{{title}}</h2>
+        <p id="intotext" >One Minute! <br> Is all it takes to make an impression. What do you want that impression to be? Can you make your one minute profitable?</p>
+      </div>
     </div>
   </div>
 </div>
+
 {% endblock %}
 
 {% block scripts %}
