--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -3,7 +3,7 @@
 {% endblock %}
 
 <nav class="navbar navbar-expand-custom navbar-mainbg">
-    <a class="navbar-brand navbar-logo" href="#">PITCH APP</a>
+    <a class="navbar-brand navbar-logo" href="/">PITCH APP</a>
     <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false"
         aria-label="Toggle navigation">
         <i class="fas fa-bars text-white"></i>
