--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,6 +43,14 @@
           {{macro.displayPitches(pitches)}}
           {{macro.displayComment(comments)}}
         </div>
+        <div  class="container tab-pane fade" id="technology"><br>
+          {{macro.displayPitches(technology)}}
+          {{macro.displayComment(comments)}}
+        </div>
+        <div  class="container tab-pane fade" id="innovation"><br>
+          {{macro.displayPitches(innovation)}}
+          {{macro.displayComment(comments)}}
+        </div>
     </div>
   </div>
 
