--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -15,7 +15,7 @@
                 <div class="right"></div>
             </div>
             {% if current_user.is_authenticated %}
-              <li><a href="{{url_for('main.profile', uname = current_user.username)}}" title="{{current_user.username}}'s Profile">Hello {{current_user.username}}!</a></li>
+              <li><a href="{{url_for('main.profile', uname = current_user.username)}}" title="{{current_user.username}}'s Profile">My Profile</a></li>
               <li><a href="{{url_for('main.new_pitch')}}">New Pitch</a></li>
               <li><a href="{{url_for('main.logout')}}">Logout</a></li>
               {% else %}
