--- a/app/templates/profiles/profile.html
+++ b/app/templates/profiles/profile.html
@@ -7,17 +7,17 @@
         <div class="col-md-2"></div>
         <div class="col-md-4">
             <h2 class="prof">My Profile</h2>
-            <hr>
-            <h3 class="prof-head">Username</h3>
+            
+            <h3 style="text-decoration:underline;" class="prof-head">Username</h3>
             <p>{{user.username | capitalize}}</p>
-            <h3 class="prof-head">About</h3>
+            <h3 style="text-decoration:underline;" class="prof-head">Bio</h3>
             {% if user.bio %}
             <p>{{user.bio}}</p>
             {% else %}
             <p>{{user.username | capitalize}} has no bio</p>
             {% endif %}
             {% if user == current_user %}
-            <a href="{{url_for('main.updateprofile', uname = user.username)}}"><button
+            <a style="color: black;" href="{{url_for('main.updateprofile', uname = user.username)}}"><button
                     class="btn btn-outline-info">Update Profile</button></a>
             {% endif %}
         </div>
